@@ -7,8 +7,11 @@ LDADD = ../libpbc.la
 
 noinst_PROGRAMS = benchmark testhilbert testbbs testsig testibe \
 	testpairing genaparam gendparam geneparam genfparam \
-	gena1param listmnt testpoly 19 sing testbls testibs testbb
+	gena1param listmnt testpoly 19 sing testbls testibs testbb \
+	checkfp timefp
 
+checkfp_SOURCES = checkfp.c
+timefp_SOURCES = timefp.c
 benchmark_SOURCES = benchmark.c
 testhilbert_SOURCES = testhilbert.c
 testbbs_SOURCES = testbbs.c
